--- a/style.css
+++ b/style.css
@@ -55,7 +55,18 @@ body{
   	color: black;
   	background-color: rgba(0,0,0,0.1);
 }
-
+.social-icons{
+	display: flex;
+}
+.margin-class{
+	margin: 2px;
+}
+.github-icon{
+	border-radius: 16px;
+}
+.linkden-icon{
+	border-radius: 5px;
+}
 /*.about-content > h5 {
 	font-weight: bold;
 }*/
